My first test message

--- a/Day1/1.1.Preliminaries.ipynb
+++ b/Day1/1.1.Preliminaries.ipynb
@@ -53,7 +53,7 @@
     "1. ... introduce you to a fully formed set of tools that work out of the box. This is work in development and we all benefit from working on these tools/algorithms together. Your own imagery and needs may necessitate that you tweak/improve/add code.\n",
     "2. ... teach you the fundamentals of any particular machine learning algorithm (instead, I will demonstrate a few of them, and go into enough details about neural networks so you have a better grip on how they work)\n",
     "2. ... demonstrate advanced tensorflow workflows\n",
-    "3. ... cover regression problems using imagery (e.g. estimate the atmospheric dust from a hazy image) "
+    "3. ... cover regression problems using imagery (e.g. estimate the atmospheric dust from a hazy image) - I.e. no continuous variable output only discrete classes\n"
    ]
   },
   {
